--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <title>User Privilege Checker</title>
 </head>
 <body>
-    <h1>User Privilege Checker</h1>
+    <h1>Проверка привилегии пользователя</h1>
     <form action="/check" method="POST">
-        <label for="username">Enter Username:</label>
+        <label for="username">Поле ввода имени пользователя:</label>
         <input type="text" id="username" name="username" required>
-        <button type="submit">Check</button>
+        <button type="submit">Проверить</button>
     </form>
     <!-- <script>
         document.getElementById("checkForm").addEventListener("submit", function(event) {
